--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-native-elements": "^1.2.1",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-image-grid": "^1.0.0",
+    "react-native-image-picker": "^1.1.0",
     "react-native-image-slider-box": "^1.0.5",
     "react-native-image-slider-show": "^1.0.3",
     "react-native-image-zoom-viewer": "^2.2.26",
@@ -40,10 +41,13 @@
     "react-native-render-html": "^4.1.2",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-star-rating": "^1.1.0",
+    "react-native-swipeout": "^2.3.6",
     "react-native-web": "^0.11.4",
     "react-navigation": "^3.11.0",
     "react-redux": "^7.1.1",
     "redux": "^4.0.4",
+    "redux-thunk": "^2.3.0",
+    "rn-fetch-blob": "^0.11.2",
     "rn-range-slider": "^1.2.8"
   },
   "devDependencies": {
