--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-constants": "6.0.0",
     "expo-font": "~6.0.0",
     "expo-web-browser": "6.0.0",
+    "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
     "react": "16.8.3",
     "react-dom": "^16.8.6",
@@ -39,6 +40,7 @@
     "react-native-paper": "^2.16.0",
     "react-native-range-slider": "^0.1.2",
     "react-native-render-html": "^4.1.2",
+    "react-native-smart-toast": "^1.1.1",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-star-rating": "^1.1.0",
     "react-native-swipeout": "^2.3.6",
