--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "@expo/samples": "~3.0.3",
     "@expo/vector-icons": "^10.0.3",
     "@ptomasroos/react-native-multi-slider": "^1.0.0",
+    "@react-native-community/slider": "^2.0.3",
     "@react-navigation/web": "^1.0.0-alpha.9",
     "axios": "^0.19.0",
     "expo": "^34.0.1",
     "expo-asset": "^6.0.0",
-    "expo-constants": "6.0.0",
+    "expo-constants": "^6.0.0",
+    "expo-facebook": "^6.0.0",
+    "expo-file-system": "^6.0.2",
     "expo-font": "~6.0.0",
+    "expo-image-picker": "^6.0.0",
     "expo-web-browser": "6.0.0",
     "native-base": "^2.13.8",
     "prop-types": "^15.7.2",
@@ -29,6 +33,7 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-34.0.0.tar.gz",
     "react-native-del": "0.0.2",
     "react-native-elements": "^1.2.1",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-gesture-handler": "~1.3.0",
     "react-native-image-grid": "^1.0.0",
     "react-native-image-picker": "^1.1.0",
@@ -40,6 +45,7 @@
     "react-native-paper": "^2.16.0",
     "react-native-range-slider": "^0.1.2",
     "react-native-render-html": "^4.1.2",
+    "react-native-slider": "^0.11.0",
     "react-native-smart-toast": "^1.1.1",
     "react-native-snap-carousel": "^3.8.0",
     "react-native-star-rating": "^1.1.0",
